--- a/app/assets/stylesheets/components/_slides.scss
+++ b/app/assets/stylesheets/components/_slides.scss
@@ -41,13 +41,12 @@
   font-size: 24px;
   top: 50%;
 }
-.image-carousel {
-  width: 100%;
-  height: 642px;
-  margin: 0 auto;
-  background-size:  contain;
-  background-repeat: no-repeat;
-  position: relative;
+.image-carousel img {
+  background-size: cover;
+  background-position: center;
+  height: 87%;
+  width: 100vw;
+  object-fit: cover;
 }
 #decline {
   margin-left: 16px;
